--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,10 @@
 <body>
 <a href="/"><b>Back to Previous Page</b></a><br/>
 Employee :<span th:text="${department.id}" ></span><br />
-<!--First Name :<span th:text="${testscore.student.fName}" ></span><br />-->
+
+First Name :<span th:text="${department.employee.fName}"/></span><br />
+Last Name :<span th:text="${department.employee.lName}"/></span><br />
+Job Title :<span th:text="${department.employee.jobTitle}"/></span><br />
 Department name :<span th:text="${department.depOne}"/></span><br />
 
 </body>
