--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -23,7 +23,7 @@
         <td th:text="${department.employee.jobTitle}"></td>
         <!--<td th:text="${testscore.subject}"></td>
         <td th:text="${testscore.date}"></td>-->
-        <td th:text="${department.score}"></td>
+        <td th:text="${department.depOne}"></td>
 
         <td>
             <a th:href="@{/update/{id}(id=${department.id})}">Update</a>
