OneToMany relation ship W/ Spring Boot

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <title>Home Page</title>
 </head>
 <body>
-<a href="/"><b>Back to Previous Page</b></a><br/>
+<a href="/"><b>Back to Employees Page</b></a><br/>
 Employee :<span th:text="${department.id}" ></span><br />
 
 First Name :<span th:text="${department.employee.fName}"/></span><br />
@@ -13,6 +13,5 @@ Last Name :<span th:text="${department.employee.lName}"/></span><br />
 Job Title :<span th:text="${department.employee.jobTitle}"/></span><br />
 Department Name :<span th:text="${department.depName}"/></span><br />
 
-<a th:href="@{/delete/{id}(id=${department.id})}">Delete</a>
 </body>
 </html>
