--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,6 +5,8 @@
     <title>List Of Employee and Department</title>
 </head>
 <body>
+<h2>List of Employees and Department</h2>
+<br />
 <a href="/addemployee">Add an Employee</a><br/>
 <a href="/add">Add a Department</a><br/>
 
@@ -12,6 +14,7 @@
     <tr>
         <th>First Name :</th>
         <th>Last Name :</th>
+        <br />
         <th>Job Title :</th>
 
         <th>Department Name :</th>
